--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.11",
-    "@angular/cli": "~13.3.11",
+    "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "~13.4.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
