Implmented home page

--- a/package.json
+++ b/package.json
@@ -15,9 +15,23 @@
     "@angular/compiler": "~16.2.7",
     "@angular/core": "~16.2.7",
     "@angular/forms": "~16.2.7",
+    "@angular/localize": "~16.2.7",
     "@angular/platform-browser": "~16.2.7",
     "@angular/platform-browser-dynamic": "~16.2.7",
     "@angular/router": "~16.2.7",
+    "@progress/kendo-angular-buttons": "^13.5.0",
+    "@progress/kendo-angular-common": "13.5.0",
+    "@progress/kendo-angular-icons": "13.5.0",
+    "@progress/kendo-angular-l10n": "13.5.0",
+    "@progress/kendo-angular-layout": "^13.5.0",
+    "@progress/kendo-angular-navigation": "^13.5.0",
+    "@progress/kendo-angular-progressbar": "13.5.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-bootstrap": "^7.0.0",
+    "@progress/kendo-theme-default": "^6.7.0",
+    "ag-grid-enterprise": "^30.2.0",
+    "bootstrap": "^5.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
