--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "^27.3.0",
     "@angular/animations": "~16.2.7",
     "@angular/common": "~16.2.7",
     "@angular/compiler": "~16.2.7",
@@ -19,19 +20,38 @@
     "@angular/platform-browser": "~16.2.7",
     "@angular/platform-browser-dynamic": "~16.2.7",
     "@angular/router": "~16.2.7",
-    "@progress/kendo-angular-buttons": "^13.5.0",
+    "@progress/kendo-angular-buttons": "13.5.0",
     "@progress/kendo-angular-common": "13.5.0",
+    "@progress/kendo-angular-dateinputs": "13.5.0",
+    "@progress/kendo-angular-dialog": "13.5.0",
+    "@progress/kendo-angular-dropdowns": "13.5.0",
+    "@progress/kendo-angular-excel-export": "13.5.0",
+    "@progress/kendo-angular-grid": "^13.5.0",
     "@progress/kendo-angular-icons": "13.5.0",
+    "@progress/kendo-angular-inputs": "13.5.0",
+    "@progress/kendo-angular-intl": "13.5.0",
     "@progress/kendo-angular-l10n": "13.5.0",
-    "@progress/kendo-angular-layout": "^13.5.0",
+    "@progress/kendo-angular-label": "13.5.0",
+    "@progress/kendo-angular-layout": "13.5.0",
     "@progress/kendo-angular-navigation": "^13.5.0",
+    "@progress/kendo-angular-pdf-export": "13.5.0",
+    "@progress/kendo-angular-popup": "13.5.0",
     "@progress/kendo-angular-progressbar": "13.5.0",
-    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-treeview": "13.5.0",
+    "@progress/kendo-angular-upload": "13.5.0",
+    "@progress/kendo-angular-utils": "13.5.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-font-icons": "^2.0.0",
+    "@progress/kendo-licensing": "^1.3.2",
     "@progress/kendo-svg-icons": "^1.0.0",
     "@progress/kendo-theme-bootstrap": "^7.0.0",
-    "@progress/kendo-theme-default": "^6.7.0",
+    "@progress/kendo-theme-default": "^7.0.0",
+    "ag-grid-angular": "^30.2.0",
+    "ag-grid-community": "^30.2.0",
     "ag-grid-enterprise": "^30.2.0",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^4.6.2",
+    "bootstrap-icons": "^1.11.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3"
