--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/all-modules": "^27.3.0",
     "@angular/animations": "~16.2.7",
     "@angular/common": "~16.2.7",
     "@angular/compiler": "~16.2.7",
