--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "ag-grid-angular": "^30.2.0",
     "ag-grid-community": "^30.2.0",
     "ag-grid-enterprise": "^30.2.0",
+    "alasql": "^4.2.3",
     "bootstrap": "^5.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
