--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "~16.2.7",
     "@angular/router": "~16.2.7",
     "@progress/kendo-angular-buttons": "13.5.0",
+    "@progress/kendo-angular-charts": "^13.5.0",
     "@progress/kendo-angular-common": "13.5.0",
-    "@progress/kendo-angular-dateinputs": "13.5.0",
+    "@progress/kendo-angular-dateinputs": "^13.5.0",
     "@progress/kendo-angular-dialog": "13.5.0",
-    "@progress/kendo-angular-dropdowns": "13.5.0",
+    "@progress/kendo-angular-dropdowns": "^13.5.0",
     "@progress/kendo-angular-excel-export": "13.5.0",
     "@progress/kendo-angular-grid": "^13.5.0",
     "@progress/kendo-angular-icons": "13.5.0",
@@ -33,7 +34,7 @@
     "@progress/kendo-angular-l10n": "13.5.0",
     "@progress/kendo-angular-label": "13.5.0",
     "@progress/kendo-angular-layout": "13.5.0",
-    "@progress/kendo-angular-navigation": "^13.5.0",
+    "@progress/kendo-angular-navigation": "13.5.0",
     "@progress/kendo-angular-notification": "^13.5.0",
     "@progress/kendo-angular-pdf-export": "13.5.0",
     "@progress/kendo-angular-popup": "13.5.0",
@@ -42,7 +43,7 @@
     "@progress/kendo-angular-utils": "13.5.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.17.2",
-    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-licensing": "^1.3.4",
     "@progress/kendo-svg-icons": "^1.0.0",
     "@progress/kendo-theme-bootstrap": "^7.0.0",
     "@progress/kendo-theme-default": "^6.7.0",
@@ -51,6 +52,7 @@
     "ag-grid-enterprise": "^30.2.0",
     "alasql": "^4.2.3",
     "bootstrap": "^5.3.2",
+    "hammerjs": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
