--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@progress/kendo-angular-l10n": "13.5.0",
     "@progress/kendo-angular-label": "13.5.0",
     "@progress/kendo-angular-layout": "13.5.0",
+    "@progress/kendo-angular-listview": "^15.4.0",
     "@progress/kendo-angular-navigation": "13.5.0",
     "@progress/kendo-angular-notification": "^13.5.0",
     "@progress/kendo-angular-pdf-export": "13.5.0",
