--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@progress/kendo-angular-popup": "^13.5.0",
     "@progress/kendo-angular-progressbar": "13.5.0",
     "@progress/kendo-angular-tooltip": "^15.1.0",
-    "@progress/kendo-angular-treeview": "13.5.0",
+    "@progress/kendo-angular-treeview": "^13.5.0",
     "@progress/kendo-angular-utils": "13.5.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.17.2",
