--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.13.3",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.2.4",
